# SubgraphRAG

./: .gitignore  run_select_then_generate.py
reason/: llm_utils.py  main.py  run_main.sh
reason/preprocess/: prepare_data.py
ref/spathrag/: README.md  main.py  pyproject.toml  requirements.txt  setup.py
ref/spathrag/configs/: default.yaml  training.yaml
ref/spathrag/data/: dataset.py  entity_linker.py
ref/spathrag/eval/: diagnostics.py  eval_metrics.py
ref/spathrag/inference/: s_path_rag_runner.py
ref/spathrag/kg/: kg_store.py  neighborhood.py  path_enumerator.py
ref/spathrag/llm_integration/: injection.py  llm_wrapper.py
ref/spathrag/models/: gnn_encoder.py  mapper_pi.py  path_encoder.py  scorer.py  verifier.py
ref/spathrag/notebooks/: visualize_paths.py
ref/spathrag/training/: losses.py  optim.py  trainer.py
ref/spathrag/utils/: io.py  logging.py  metrics.py
retrieve/: emb.py  eval.py  inference.py  run_emb_cwq.sh  run_emb_webqsp.sh  run_eval.sh  run_inference.sh  run_train.sh  run_train_asl.sh  run_visualize.sh  sample_candidate_paths.py  train.py  train_asl.py  visualize_retriever_bce_scores.py
retrieve/configs/retriever/: webqsp_v2.yaml
retrieve/ref/: selector.py  train_selector_asl.py
retrieve/spathrag/: __init__.py  path_sampler.py  path_utils.py
retrieve/src/dataset/: retriever.py
retrieve/src/model/text_encoders/: gte_large_en.py
